version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/ExternalData/ImportSettingsFactory.rst.txt
.. vale off



:class:`ImportSettingsFactory`
==============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.ExternalData.ImportSettingsFactory

   Bases: :py:obj:`object`




.. py:currentmodule:: ImportSettingsFactory

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetSettingsForFormat`
            - constructs and returns the correct settings class













Method detail
-------------
.. py:method:: GetSettingsForFormat(format: Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat) -> Ansys.Mechanical.ExternalData.ImportSettingsBase
   :classmethod:


.. code-block:: text

    constructs and returns the correct settings class
   instance based on the specified format.

..
       !! processed by numpydoc !!



.. vale on