version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/ExternalData/ImportSettingsFactory.rst.txt
.. vale off



:class:`ImportSettingsFactory`
==============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.ExternalData.ImportSettingsFactory

   Bases: :py:obj:`object`




.. py:currentmodule:: ImportSettingsFactory

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetSettingsForFormat`
            - constructs and returns the correct settings class


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.












Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSettingsForFormat(format: Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat) -> Ansys.Mechanical.ExternalData.ImportSettingsBase
   :classmethod:


.. code-block:: text

    constructs and returns the correct settings class
   instance based on the specified format.

..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on